# OGCTZ_Website

./: .env.example  .gitignore  .vercelignore  CMS_SETUP.md  Dockerfile  EFFECTS_DOCUMENTATION.md  app.py  cms.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  structure.txt  test.txt  vercel.json
api/: index.py
cms/: __init__.py  models.py  utils.py
cms/routes/: admin.py  blog.py
cms/templates/admin/: base.html  categories.html  comments.html  content.html  content_form.html  dashboard.html  images.html  login.html  post_form.html  posts.html  setup.html  subscribers.html  user_form.html  users.html
cms/templates/blog/: archive.html  index.html  rss.xml  (+2 more)
migrations/: add_minio_url_to_cms_images.sql  add_storage_url_to_cms_images.sql  rename_minio_url_to_storage_url.sql
ogctz_frontend/: app.py
ogctz_frontend/templates/: base.html  index.html
static/css/: style.css
static/js/: animated-bg.js  effects.js  theme.js
templates/: 404.html  about.html  base.html  contact.html  index.html  projects.html  resources.html  services.html  sitemap.xml  team.html
templates/admin/: base.html  categories.html  comments.html  content.html  content_form.html  dashboard.html  images.html  post_form.html  posts.html  subscribers.html  user_form.html  users.html
templates/blog/: archive.html  index.html  post.html  rss.xml  search.html
templates/gis_course/: gis_course.html  module_one.html  module_one_quiz.html  module_one_quiz_results.html  register_success.html
templates/includes/: animated-bg.html  footer.html  header.html  news_letter.html
(+4 files in other folders)
