[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengeocity-web"
version = "1.0.0"
description = "OpenGeoCity Web Frontend"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "werkzeug",
    "authlib",
    "requests",
    "python-dotenv"
]

[tool.setuptools]
py-modules = ["app"]


